--- a/index.html
+++ b/index.html
@@ -3,20 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="style.css" rel="stylesheet">
+    
     <title>Chuleta JS</title>
 </head>
 <body>
     <h1>Chuleta</h1>
 
-    <div>
-        <h2>Funciones para array</h2>
+    <div class="funcionesArray__busqueda">
+        <h2>Funciones de busqueda para las arrays</h2>
         <dl>
             <ul>
                 <li>
-                    <dt>array.include(X)</dt>
+                    <dt>array.includes(X)</dt>
                         <dd>Comprobacion si X esta incluido</dd>
+                        <img src="Imagenes/arrays-search-includes.png"/>
                 </li>
-                
+
             </ul>
         </dl>
     </div>
