Add 3 funtion more

--- a/index.html
+++ b/index.html
@@ -8,20 +8,55 @@
     <title>Chuleta JS</title>
 </head>
 <body>
-    <h1>Chuleta</h1>
+    <div class="layout">
+        <h1>Chuleta</h1>
 
-    <div class="funcionesArray__busqueda">
-        <h2>Funciones de busqueda para las arrays</h2>
-        <dl>
-            <ul>
-                <li>
-                    <dt>array.includes(X)</dt>
-                        <dd>Comprobacion si X esta incluido</dd>
-                        <img src="Imagenes/arrays-search-includes.png"/>
-                </li>
+            <div class="layoutArray__busqueda">
+                <h2>Funciones de busqueda para las arrays</h2>
+                <dl>
+                    <ul>
+                        <li>
+                            <dt>array.includes(X)</dt>
+                                <dd>Comprobacion si X esta incluido</dd>
+                                <img src="Imagenes/arrays-search-includes.png"/>
+                        </li>
 
-            </ul>
-        </dl>
+                    </ul>
+                </dl>
+            </div>
+
+            <div class="layoutArray__math"></div>
+                <h2>Funciones matematicas para las arrays</h2>
+                <dl>
+                    <ul>
+                        <li>
+                            <dt>return Math.min(...arr)</dt>
+                                <dd>busca el numero mas pequeño en la array</dd>
+                                <img src="Imagenes/Math-min.png"/>
+                        </li>
+                        <li>
+                            <dt>return Math.max(...arr)</dt>
+                                <dd>busca el numero mas grande en la array</dd>
+                                <img src="Imagenes/Math-max.png"/>
+                        </li>
+
+                    </ul>
+                </dl>
+            </div>
+
+            <div class="layoutArray__crear"></div>
+                <h2>Funciones de creacion de nuevas arrays</h2>
+                <dl>
+                    <ul>
+                        <li>
+                            <dt>array.slice(1,-1)</dt>
+                                <dd>Crea una nueva array desde los indices indicados</dd>
+                                <img src=""/>
+                        </li>
+
+                    </ul>
+                </dl>
+            </div>
     </div>
     
 </body>
